--- a/MsWeb/Views/Home/UpdateLog.cshtml
+++ b/MsWeb/Views/Home/UpdateLog.cshtml
@@ -3,56 +3,58 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>网站更新日志</h2>
-<table class="table">
-    <tr>
-        <th width="128">更新时间</th>
-        <th>更新日志</th>
-        <th width="80">更新人员</th>
-    </tr>
-    <tr>
-        <td>2017年10月20日</td>
-        <td>增加网站用户注册、登陆的功能。增加特约用户上传商品的功能。增加帮助中心功能。</td>
-        <td align="center">Lisx24</td>
-    </tr>
-    <tr>
-        <td>2017年10月19日</td>
-        <td>增加网站更新日志功能</td>
-        <td align="center">Lisx24</td>
-    </tr>
-    <tr>
-        <td>2017年10月18日</td>
-        <td>增加网页浏览商品时生成二维码，供用户直接用手机淘宝扫描二维码获取优惠券信息。右上角增加微信公众号二维码。</td>
-        <td align="center">Lisx24</td>
-    </tr>
-    <tr>
-        <td>2017年10月09日</td>
-        <td>更换后台更换框架。</td>
-        <td align="center">Lisx24</td>
-    </tr>
-    <tr>
-        <td>2017年09月29日</td>
-        <td>将移动端的服务转化成了Web Api，使用框架实现了后台数据库访问。</td>
-        <td align="center">Lisx24</td>
-    </tr>
-    <tr>
-        <td>2017年09月26日</td>
-        <td>增加帮助页面，增加数据库访问，增加数据控制器。</td>
-        <td align="center">Lisx24</td>
-    </tr>
-    <tr>
-        <td>2017年09月14日</td>
-        <td>界面调整，增加优惠券获取界面。</td>
-        <td align="center">Lisx24</td>
-    </tr>
-    <tr>
-        <td>2017年09月11日</td>
-        <td>增加博客功能，增加软件下载页面。</td>
-        <td align="center">Lisx24</td>
-    </tr>
-    <tr>
-        <td>2017年08月27日</td>
-        <td>正式注册域名www.mingshukeji.com.cn,并申请备案服务器。</td>
-        <td align="center">Lisx24</td>
-    </tr>
-</table>
+<div class="container">
+    <h2>网站更新日志</h2>
+    <table class="table">
+        <tr>
+            <th width="128">更新时间</th>
+            <th>更新日志</th>
+            <th width="80">更新人员</th>
+        </tr>
+        <tr>
+            <td>2017年10月20日</td>
+            <td>增加网站用户注册、登陆的功能。增加特约用户上传商品的功能。增加帮助中心功能。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年10月19日</td>
+            <td>增加网站更新日志功能</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年10月18日</td>
+            <td>增加网页浏览商品时生成二维码，供用户直接用手机淘宝扫描二维码获取优惠券信息。右上角增加微信公众号二维码。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年10月09日</td>
+            <td>更换后台更换框架。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年09月29日</td>
+            <td>将移动端的服务转化成了Web Api，使用框架实现了后台数据库访问。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年09月26日</td>
+            <td>增加帮助页面，增加数据库访问，增加数据控制器。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年09月14日</td>
+            <td>界面调整，增加优惠券获取界面。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年09月11日</td>
+            <td>增加博客功能，增加软件下载页面。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年08月27日</td>
+            <td>正式注册域名www.mingshukeji.com.cn,并申请备案服务器。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+    </table>
+</div>
