--- a/MsWeb/Views/Home/Recruit.cshtml
+++ b/MsWeb/Views/Home/Recruit.cshtml
@@ -10,7 +10,7 @@
     <title></title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h1><font color="red">招募令</font></h1>
         <h3>手机APP刚刚上线，现招募100位淘宝客加盟，1元成为特约用户，可以上传自己分享的商品信息。</h3>
         <h4><b>基本要求：</b></h4>
