--- a/MsWeb/Views/Home/UpdateLog.cshtml
+++ b/MsWeb/Views/Home/UpdateLog.cshtml
@@ -12,6 +12,16 @@
             <th width="80">更新人员</th>
         </tr>
         <tr>
+            <td>2017年10月31日</td>
+            <td>首页菜单修改为二级菜单功能，首页轮播图修改为全屏。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
+            <td>2017年10月26日</td>
+            <td>修改首页内容，更新bootstrap版本，注册和登录增加简单的验证码。</td>
+            <td align="center">Lisx24</td>
+        </tr>
+        <tr>
             <td>2017年10月20日</td>
             <td>增加网站用户注册、登陆的功能。增加特约用户上传商品的功能。增加帮助中心功能。</td>
             <td align="center">Lisx24</td>
