--- a/MsWeb/Content/style.css
+++ b/MsWeb/Content/style.css
@@ -68,7 +68,7 @@
     margin-top:-9px;
 }
 .slider-show{
-    margin-top:-170px;
+    margin-top:-10px;
     border-radius: 20px;
 }
 
@@ -106,4 +106,33 @@
 	text-align: center;
 	vertical-align: middle;
     margin-top:-22px;
+}
+/*二级菜单*/
+.menulevel2 ul {
+	list-style-type: none;
+    background-color:#000080;
+    width:100px;
+}
+
+.menulevel2 ul li {
+	float: left;
+    /*以下设置仅为方便查看效果*/
+}
+
+.menulevel2 ul li ul {
+	display: none;
+    position:absolute;
+}
+
+.menulevel2 li:hover ul {
+	display: block;
+}  
+.menulevel2 ul li ul li {
+	float: none;
+}
+.menulevel2 ul li ul li a{
+	float: none;
+	border-right: none;
+	border-top: 1px dotted #ccc;
+	background: red;
 }
