--- a/MsWeb/Views/Coupon/UploadCoupon.cshtml
+++ b/MsWeb/Views/Coupon/UploadCoupon.cshtml
@@ -5,7 +5,7 @@
 
 <script src="~/Scripts/uploadCoupon.js" type="text/javascript"></script>
 
-<div class="uploadCouponMain">
+<div class="container uploadCouponMain">
     <div class="container">
         <h3>特约用户上传推广商品信息</h3>
     </div>
