--- a/MsWeb/Views/Shared/_Layout.cshtml
+++ b/MsWeb/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
         main{padding-top:60px; padding-bottom:50px}
         footer{position:absolute;bottom:0;width:100%;height:50px;}
         p.foot{text-align:center; height:10px; font-size:12px;} 
+        .menulevel2-ul{ margin: -5px -15px; }
+        .menulevel2-ul li a { padding-top: 5px; padding-bottom: 5px; line-height: 20px;}
     </style>
     <script>
         (function(){
@@ -90,23 +92,25 @@
                     @*@Html.ActionLink("MSKJ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
                 </div>
                 <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
+                    <ul class="nav navbar-nav menulevel2">
                         <li>@Html.ActionLink("首页", "Index", "Home", new { area = "" }, null)</li>
                         <li>
-                            @Html.ActionLink("闪荐", "GoodsIndex", "Home", new { area = "" }, null)
-                            @*<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                <li>@Html.ActionLink("推荐商品", "Index", "Coupon", new { area = "" }, null)</li>
-                                <li>@Html.ActionLink("上传商品", "UploadCoupon", "Coupon", new { area = "" }, null)</li>
-                                <li>@Html.ActionLink("招募令", "Recruit", "Home", new { area = "" }, null)</li>
-                            </ul>*@
+                            @Html.ActionLink("产品中心", "GoodsIndex", "Home", new { area = "" }, null)
+                            <ul class="navbar-nav dropdown-menu menulevel2-ul">
+                                <li>@Html.ActionLink("闪荐-推荐商品", "Index", "Coupon", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("闪荐-上传商品", "UploadCoupon", "Coupon", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("闪荐-招募令", "Recruit", "Home", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("闪荐-帮助中心", "Index", "Help", new { area = "" }, null)</li>
+                                <li>@Html.ActionLink("闪荐-软件下载", "SoftDownload", "Home", new { area = "" }, null)</li>
+                            </ul>
                         </li>
-                        <li>@Html.ActionLink("推荐商品", "Index", "Coupon", new { area = "" }, null)</li>
+                        @*<li>@Html.ActionLink("推荐商品", "Index", "Coupon", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("上传商品", "UploadCoupon", "Coupon", new { area = "" }, null)</li>
                         <li>@Html.ActionLink("招募令", "Recruit", "Home", new { area = "" }, null)</li>
-                        <li>@Html.ActionLink("软件下载", "SoftDownload", "Home", new { area = "" }, null)</li>
-                        <li>@Html.ActionLink("帮助中心", "Index", "Help", new { area = "" }, null)</li>
+                        <li>@Html.ActionLink("软件下载", "SoftDownload", "Home", new { area = "" }, null)</li>*@
                         <li>@Html.ActionLink("更新日志", "UpdateLog", "Home", new { area = "" }, null)</li>
-                        <li><a href="http://www.mingshukeji.com.cn:81">博客</a></li>
+                        <li>@Html.ActionLink("关于我们", "AboutUs", "Home", new { area = "" }, null)</li>
+                        @*<li><a href="http://www.mingshukeji.com.cn:81">博客</a></li>*@
                     </ul>
                 </div>
             </div>
